<?xml version="1.0"?>
<!-- Package metadata and dependencies for the custom swarm messages. -->
<package format="3">
  <name>swarm_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces for swarm robotics</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Needed to generate message code. -->
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Needed when other packages use the generated messages. -->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>